--- a/src/assets/svg/iconfont.css
+++ b/src/assets/svg/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3851187 */
-  src: url('iconfont.woff2?t=1676020535070') format('woff2'),
-       url('iconfont.woff?t=1676020535070') format('woff'),
-       url('iconfont.ttf?t=1676020535070') format('truetype');
+  src: url('iconfont.woff2?t=1676213248818') format('woff2'),
+       url('iconfont.woff?t=1676213248818') format('woff'),
+       url('iconfont.ttf?t=1676213248818') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-singlecycle:before {
+  content: "\e69f";
+}
+
+.icon-random:before {
+  content: "\e618";
+}
+
+.icon-loop:before {
+  content: "\e634";
 }
 
 .icon-pause1:before {
