--- a/src/assets/svg/iconfont.css
+++ b/src/assets/svg/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3851187 */
-  src: url('iconfont.woff2?t=1676213248818') format('woff2'),
-       url('iconfont.woff?t=1676213248818') format('woff'),
-       url('iconfont.ttf?t=1676213248818') format('truetype');
+  src: url('iconfont.woff2?t=1679410098663') format('woff2'),
+       url('iconfont.woff?t=1679410098663') format('woff'),
+       url('iconfont.ttf?t=1679410098663') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-back_android:before {
+  content: "\e7ed";
+}
+
+.icon-delete:before {
+  content: "\e687";
 }
 
 .icon-singlecycle:before {
